@@ -1,7 +1,9 @@
 0.5.3 (unreleased)
 ==================
 
-- Nothing changed yet.
+*Bugfix:*
+
+  - Don't crash on a set of options ending with a quoted value (e.g ``{song format="..."}``)
 
 
 0.5.2 (2019-01-02)
